// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/view_image/ImagePreview should match snapshot, with preview 1`] = `
<div
  style={
    Object {
      "transform": "
            translate(0px, 0px)
            scale(1)
        ",
    }
  }
>
  <LoadingSpinner
    text={null}
  />
  <img
    className="image_preview image_preview__normal image_preview_loading"
    loading="lazy"
    onLoad={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    onWheel={[Function]}
    src="/api/v4/files/file_id_1/preview"
  />
</div>
`;

exports[`components/view_image/ImagePreview should match snapshot, with preview, cannot download 1`] = `
<div
  style={
    Object {
      "transform": "
            translate(0px, 0px)
            scale(1)
        ",
    }
  }
>
  <LoadingSpinner
    text={null}
  />
  <img
    className="image_preview image_preview__normal image_preview_loading"
    loading="lazy"
    onLoad={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    onWheel={[Function]}
    src="/api/v4/files/file_id_1/preview"
  />
</div>
`;

exports[`components/view_image/ImagePreview should match snapshot, without preview 1`] = `
<div
  style={
    Object {
      "transform": "
            translate(0px, 0px)
            scale(1)
        ",
    }
  }
>
  <LoadingSpinner
    text={null}
  />
  <img
    className="image_preview image_preview__normal image_preview_loading"
    loading="lazy"
    onLoad={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    onWheel={[Function]}
    src="/api/v4/files/file_id?download=1"
  />
</div>
`;

exports[`components/view_image/ImagePreview should match snapshot, without preview, cannot download 1`] = `
<div
  style={
    Object {
      "transform": "
            translate(0px, 0px)
            scale(1)
        ",
    }
  }
>
  <LoadingSpinner
    text={null}
  />
  <img
    className="image_preview image_preview__normal image_preview_loading"
    loading="lazy"
    onLoad={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    onWheel={[Function]}
    src="/api/v4/files/file_id?download=1"
  />
</div>
`;
